# detect-gh-actions-unused-secrets

./: .gitignore  .pre-commit-config.yaml  README.md  detect_gh_actions_unused_secrets.py  mypy.ini  setup.cfg
.github/workflows/: release.yml  test.yml
tests/integration/: test_main.py
