[metadata]
name = detect_gh_actions_unused_secrets
version = 0.5.0
description = Detects secrets that are defined in the repository and are not used in Github Actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artemrys/detect-gh-actions-unused-secrets
author = Artem Rys
author_email = rysartem@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = detect_gh_actions_unused_secrets
python_requires = >=3.7

[options.entry_points]
console_scripts =
    detect-gh-actions-unused-secrets=detect_gh_actions_unused_secrets:main

[bdist_wheel]
universal = True
